Issue #27786: Simplify x_sub()

The z variable is known to be a fresh number which cannot be shared, Py_SIZE()
can be used directly to negate the number.